--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ p{
 
  <p class="n">Nearst Seller</p>
 
-  <img src="32cc2b406b6ebbb792b8ee3cb3aac7e4.gif"  height="250px"/>
+  <img src="images.jpg"  height="250px"/>
 
   <h1>Wireless Bluetooth Headset</h1>
 
